examples/failing/MutRec2.purs
module MutRec2 where

x = x
